feat: tela do jogo

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,1 +1,25 @@
-<p>game works!</p>
+<div class="container">
+  <div class="content">
+    <div class="title">
+      <h1>Sala 123</h1>
+      <span>Pedra, papel ou tesoura</span>
+    </div>
+
+    <div class="room">
+      
+    </div>
+
+    <div class="footer">
+        <div class="action">
+            <img src="../../../assets/hand-paper.png" height="80px" alt="paper">
+        </div>
+        <div class="action">
+            <img src="../../../assets/hand-rock.png" alt="rock">
+        </div>
+        <div class="action">
+            <div class="action">
+            <img src="../../../assets/hand-scissors.png" height="85px" alt="scissors">
+        </div>
+    </div>
+  </div>
+</div>
