--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
 
     <div class="room">
       <h4>Entre ou crie uma sala</h4>
-      <button class="btn-room">+ Criar sala</button>
+      <button class="btn-room" (click)="createRoom()">+ Criar sala</button>
 
       <input type="text" placeholder="CÓDIGO DA SALA" />
       <button class="btn-room">Entrar</button>
