--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -30,9 +30,11 @@
     text-align: center;
 }
 
-.room h4 {
-    text-align: center;
-    font-size: 30px;
+.room {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .footer {
@@ -42,7 +44,7 @@
     justify-content: space-between;
 }
 
-.footer .action {
+.action {
     width: 120px;
     height: 120px;
     background-color: #FFF;
@@ -54,12 +56,26 @@
     transition: all ease 0.5s;
 }
 
-.footer .action:hover {
+.action:hover {
     cursor: pointer;
     transform: scale(0.97);
 }
 
-.footer .action img {
+.action img {
     object-fit: contain;
     max-height: 90px;
+}
+
+.your-select {
+    width: 50%;
+    border: 2px solid #FFF;
+    max-width: 200px;
+    min-width: 150px;
+    height: 190px;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
 }
