--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,8 @@
       <h4>Entre ou crie uma sala</h4>
       <button class="btn-room" (click)="createRoom()">+ Criar sala</button>
 
-      <input type="text" placeholder="CÓDIGO DA SALA" />
-      <button class="btn-room">Entrar</button>
+      <input type="text" placeholder="CÓDIGO DA SALA" [(ngModel)]="roomCode" />
+      <button class="btn-room" (click)="enterRoom()">Entrar</button>
     </div>
 
     <div class="footer"></div>
